force-app/main/default/objects/OrgMonitoring__c/OrgMonitoring__c.object-meta.xml
<CustomObject>
    <description>This object is used to store licences and limits information for Org Monitoring</description>
    <label>OrgMonitoring</label>
    <nameField>
        <displayFormat>S{000000000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrgsMonitoring</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>