force-app/main/default/objects/OrgMonitoring__c/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <label>Business Unit</label>
    <type>TextArea</type>
</CustomField>