force-app/main/default/objects/OrgMonitoring__c/fields/LicenseCategory__c.field-meta.xml
<CustomField>
    <fullName>LicenseCategory__c</fullName>
    <description>This field permit to group different licences under the same categpry</description>
    <label>LicenseCategory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>