force-app/main/default/objects/OrgMonitoring__c/fields/ObsoleteLoginUserList__c.field-meta.xml
<CustomField>
    <fullName>ObsoleteLoginUserList__c</fullName>
    <label>Obsolete Login User List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>