force-app/main/default/objects/OrgMonitoring__c/fields/OrgCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OrgCreatedDate__c</fullName>
    <description>The date of creation of the org.</description>
    <label>OrgCreatedDate</label>
    <type>Date</type>
</CustomField>