force-app/main/default/objects/OrgMonitoring__c/fields/OrgDomainName__c.field-meta.xml
<CustomField>
    <fullName>OrgDomainName__c</fullName>
    <label>OrgDomainName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>