force-app/main/default/objects/OrgMonitoring__c/fields/OrgID__c.field-meta.xml
<CustomField>
    <fullName>OrgID__c</fullName>
    <label>Org ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>