force-app/main/default/objects/OrgMonitoring__c/fields/OrgInstance__c.field-meta.xml
<CustomField>
    <fullName>OrgInstance__c</fullName>
    <label>OrgInstance</label>
    <length>100</length>
    <type>Text</type>
</CustomField>