force-app/main/default/objects/OrgMonitoring__c/fields/PercentUsed__c.field-meta.xml
<CustomField>
    <fullName>PercentUsed__c</fullName>
    <formula>IF(Total__c  = 0, 0, (Used__c /  Total__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PercentUsed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>