force-app/main/default/objects/OrgMonitoring__c/fields/TimestampText__c.field-meta.xml
<CustomField>
    <fullName>TimestampText__c</fullName>
    <label>TimestampText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>