force-app/main/default/objects/OrgMonitoring__c/fields/TranslatedLicenseName__c.field-meta.xml
<CustomField>
    <fullName>TranslatedLicenseName__c</fullName>
    <description>This field contains a &quot;redeable&quot; name for licences who are stored with a prefix under their name.</description>
    <label>TranslatedLicenseName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>