force-app/main/default/objects/OrgMonitoring__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of limit</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>