force-app/main/default/objects/OrgMonitoring__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Name__c</columns>
    <columns>Total__c</columns>
    <columns>Used__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>